1999-08-12  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* misc.h: Declare strtoll if HAVE_STRTOLL is not defined.

	* strtoll.c: New file.

	* Makefile.am (EXTRA_DIST): Add strtoll.c.

1999-08-07  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* misc.h: Declare xstrdup, remove conditional strdup declaration.

	* Makefile.am (SRC): Move strdup from EXTRA_DIST to SRC.

1999-08-06  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* avl.c (avl_destroy, avl_free, avl_delete): Use xfree instead of
	free.

1999-08-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* xmalloc.c: Add GC_* defs for Kaffe. (disabled)

	* find_executable.c (find_executable): Avoid use of strdup.

1999-07-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* misc.h (MAX_ALIGNMENT): New macro.

1999-07-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* argp-fmtstream.h, argp.h: Force __const to be const.
	HPUX 11 defines __const causing mismatches.

1999-07-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* dropdir.c (SLASHP): New macro. 
	(dropdir): Use it.

1999-06-17  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* find_executable.c (find_executable): Have realpath write
	into a zeroed-out stack array, then strdup the result -- eliminate
	a Checker warning.

1999-06-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (noinst_LTLIBRARIES, lib_LTLIBRARIES): Substitute
	{inst,noinst}LIBS.
	(EXTRA_LTLIBRARIES): New variable.
	(libmisc_la_LDFLAGS): Substitute inst_LDFLAGS.

	* find_executable.c (maybe_executable): Disable Linux check
	for inode match.  It screws up with Java wrapper script.

	* misc.h (abort): #define to debugabort with file, line, and
	function name arguments.  Declare debugabort as nonreturning.

	* debugabort.c: New file.

1999-06-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (EXTRA_HEADERS): Set to argp.h.
	(misc_HEADERS): Use @ARGP_H@ instead of argp.h.

1999-05-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
