@@ -1,6 +1,7 @@
 1999-08-12  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* misc.h: Declare strtoll if HAVE_STRTOLL is not defined.
+	Ensure that LLONG_{MIN,MAX} exists.
 
 	* strtoll.c: New file.
 
